--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-hw-04-movies-hooks",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chivova.github.io/react-hw-04-movies-hooks",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -18,7 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
