--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-hw-04-movies-hooks",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chivova.github.io/react-hw-04-movies-hooks",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -26,7 +25,7 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
